--- a/sidebar-nav.css
+++ b/sidebar-nav.css
@@ -1,6 +1,6 @@
 /****************** sidebar ***********************/
 .sidebar {
-    background-color: #000000;
+    background-color: #1A161F;
     color: white;
     width: 275px;
     height: 100%;
