--- a/style.css
+++ b/style.css
@@ -175,10 +175,150 @@ body {
 }
 
 /* containar */
-.containar {
+.containar{
   background-color: #0D0C0F;
   color: #ffffff;
   padding: 5px;
   margin-left: 275px;
   margin-top: 50px;
+  width: 100%;
 }
+
+
+
+.comments-user {
+  width: 40px;
+  height: 40px;
+  border-radius: 20%;
+  object-fit: contain;
+   float: right;
+}
+
+
+/********************coming soon*********************/
+#Coming-Soon{
+    margin-top: 3rem;
+    color: white;
+}
+
+.title-coming{
+    margin-bottom: 30px;
+}
+
+.container {
+    max-width: 1200px;
+    width: 100%;
+    height: 30%;
+    padding: 0 1rem;
+}
+  
+.slider-wrapper {
+    position: relative;
+}
+  
+.row1{
+    font-size: 10px;
+}
+
+.slider-wrapper .slide-button {
+    position: absolute;
+    top: 50%;
+    outline: none;
+    border: none;
+    height: 30px;
+    width: 30px;
+    z-index: 5;
+    color: #000000;
+    display: flex;
+    cursor: pointer;
+    font-size: 2rem;
+    background: #ffffff;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transform: translateY(-130%);
+}
+
+.slider-wrapper .slide-button:hover {
+    background: #404040;
+}
+
+.slider-wrapper .slide-button#prev-slide {
+    left: -25px;
+    display: none;
+}
+
+.slider-wrapper .slide-button#next-slide {
+    right: -25px;
+}
+
+.slider-wrapper .image-list {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 18px;
+    font-size: 0;
+    list-style: none;
+    margin-bottom: 30px;
+    overflow-x: auto;
+    scrollbar-width: none;
+   height: 15rem;
+}
+
+.slider-wrapper .image-list::-webkit-scrollbar {
+    display: none;
+}
+
+.slider-wrapper .image-list .image-item {
+    width: 269px;
+    height: 150x;
+    object-fit: cover;
+}
+
+.container .slider-scrollbar {
+    height: 24px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.slider-scrollbar .scrollbar-track {
+    background: #ccc;
+    width: 100%;
+    height: 2px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    position: relative;
+}
+
+.slider-scrollbar:hover .scrollbar-track {
+    height: 4px;
+}
+
+.slider-scrollbar .scrollbar-thumb {
+    position: absolute;
+    background: #000;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    height: 100%;
+    cursor: grab;
+    border-radius: inherit;
+}
+
+.slider-scrollbar .scrollbar-thumb:active {
+    cursor: grabbing;
+    height: 8px;
+    top: -2px;
+}
+
+.slider-scrollbar .scrollbar-thumb::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -10px;
+    bottom: -10px;
+}
+
+/********************\coming soon*********************/
