--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -4,7 +4,7 @@ body{
     color: aliceblue;
 }
 #hero-section {
-    background: url('images/Image.png') no-repeat center center;
+    background: url('../images/Image.png') no-repeat center center;
     background-size: cover;
     color: white;
     padding: 20px;
