--- a/assets/styles/MovieDetiles.css
+++ b/assets/styles/MovieDetiles.css
@@ -10,63 +10,130 @@ body {
   background-color: #f0f0f0;
 }
 
+* {
+    margin: 0;
+  }
+  
+ 
+  
 /* navbar */
 .navbar {
-  width: 100%;
-  height: 50px;
-  background-color: #0D0C0F;
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  box-shadow: 2px 2px 2px  #1A161F;
+    width: 100%;
+    height: 50px;
+    background-color: #0d0c0f;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    box-shadow: 2px 2px 2px #1a161f;
+  }
+  
+  .navbar-container {
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    padding: 0 24px;
+    height: 100%;
+  }
+  
+  .logo-container {
+    flex: 2;
+    margin-right: 130px;
+    margin-top: 7px;
+  }
+  
+  .menu-container {
+    flex: 8;
+    display: flex;
+    justify-content: flex-start;
+    
+  }
+
+  .menu-container li{
+    list-style: none;
+  }
+  
+  .ulNavbar {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .liNavbar {
+    margin-right: 30px;
+    cursor: pointer;
+  }
+  
+  .liNavbar:hover,
+  .liNavbar.active {
+    font-weight: bold;
+    color: #b43feb;
+  }
+  
+  .profile-container {
+    flex: 2;
+    display: flex;
+    margin-left: 850px;
+    justify-content: flex-end;
+  }
+  
+  .profile-container > div {
+    display: flex;
+    align-items: center;
+  }
+  
+  #user-picture {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    object-fit: contain;
+    margin-left: 10px;
+  }
+  
+  .profile-container .fas {
+    width: 20px;
+    height: 100%;
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  
+  .profile-container .fas:hover {
+    color: #b43feb;
+  }
+  
+
+  #btnMenu{
+    display: none;
 }
 
-.navbar-container {
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  padding: 0 64px;
-  height: 100%;
-}
-
-.logo-container {
-  flex: 2;
-}
-
-.menu-container {
-  flex: 8;
-  display: flex;
-  list-style: none;
-  justify-content: flex-start;
-}
-
-.liNavbar {
-  margin-right: 30px;
-}
-
-.liNavbar.active {
-  font-weight: bold;
-  color: #b43feb;
-}
-
-.profile-container {
-  flex: 2;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-right: -40px;
-}
-
-#user-picture {
-  width: 20px;
-  height: 20px;
-  border-radius: 20%;
-  object-fit: contain;
-}
-
-.profile-container .fas {
-  width: 50px;
-  height: 100%;
+@media (max-width : 888px) {
+    .menu-container{
+        position: absolute;
+        top: 100%;
+        right: -450px;
+        flex-direction: column;
+        background-color:rgb(0, 0, 0) ;
+        border-left: 1px solid #444444a8;
+        width: 400px;
+        height: 100vh;
+        z-index: 100;
+        text-align: center;
+        padding: 20px 0;
+        transition: 0.3s;
+       
+    }
+    .menu-container.active{
+        right: 0;
+    }
+    
+    .profile-container{
+        display: none;
+    }
+    #btnMenu{
+        margin-left: 30%;
+        display: block;
+        font-size: 30px;
+    }
 }
 
 /* sidebar */
@@ -194,7 +261,41 @@ body {
    float: right;
 }
 
+  @media (max-width: 768px) {
+    .sidebar {
+        width: 80px;
+        padding: 10px;
+    }
 
+    .sidebar a {
+        justify-content: center;
+        padding: 10px 5px;
+    }
+
+    .sidebar a .link-text {
+        display: none;
+    }
+
+    .dark-mode-toggle {
+        top: 10px;
+        right: 10px;
+        width: 30px;
+        height: 15px;
+    }
+
+    .dark-mode-toggle .toggle-button {
+        width: 12px;
+        height: 12px;
+    }
+
+    .dark-mode-toggle.on .toggle-button {
+        transform: translateX(12px);
+    }
+
+    .containar {
+        margin-left: 80px;
+    }
+}
 /********************coming soon*********************/
 #Coming-Soon{
     margin-top: 3rem;
@@ -321,4 +422,78 @@ body {
     bottom: -10px;
 }
 
+@media only screen and (max-width: 1023px) {
+    .title-topMovies{
+        font-size: 20px;
+        margin-top: 30px;
+    }
+
+    .slider-wrapper .slide-button {
+        margin-left: 2rem;
+    }
+
+    .slider-wrapper .image-list {
+        gap: 10px;
+        margin-bottom: 15px;
+        scroll-snap-type: x mandatory;
+    }
+
+    .slider-wrapper .image-list .image-item {
+        width: 280px;
+        height: 380px;
+    }
+
+    .slider-scrollbar .scrollbar-thumb {
+        width: 20%;
+    }
+}
+
 /********************\coming soon*********************/
+
+
+
+
+/* =========== Movie detiles =========== */
+/* Base styles */
+.containar {
+  max-width: 100%;
+  padding: 0 1rem; /* Adjust padding as needed */
+}
+
+.card {
+  margin-bottom: 2rem;
+  width: 60rem; /* Default width for larger screens */
+}
+
+.card-body {
+  padding: 1rem;
+}
+
+.container {
+  max-width: 100%;
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 1200px) {
+  .card {
+    width: 50rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .card {
+    width: 40rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .card {
+    width: calc(100% - 2rem); /* Adjust margin/padding */
+  }
+}
