--- a/assets/styles/signUp.css
+++ b/assets/styles/signUp.css
@@ -88,7 +88,7 @@ body, html {
     color: #fff;
 }
 
-.login-button {
+.signUp-button {
     width: 100%;
     padding: 10px;
     border-radius: 24px;
