--- a/assets/styles/topratedpage.css
+++ b/assets/styles/topratedpage.css
@@ -198,11 +198,12 @@ body {
 }
 .movie-card {
   background-color: #3333332c;
+  color: white;
   border-radius: 10px;
-  /* overflow: hidden; */
-  text-align: center;
-  gap: 15px;
+  gap: 35px;
   border-radius: 25px;
+  display: flex;
+  /* width: 33%; */
 }
 .movie-card img {
   /* width: 100%;
@@ -231,9 +232,9 @@ body {
   font-size: 12px;
   color: #b3b3b3;
 }
-.top-rated .movie-card {
+/* .top-rated .movie-card {
   display: flex;
-}
+} */
 
 .movie-best {
   display: flex;
@@ -242,44 +243,98 @@ body {
 /* card2 */
 
 .movie-cardb {
-    background-color: #3333332c;
-    border-radius: 10px;
-    /* overflow: hidden; */
-    text-align: center;
-    gap: 15px;
-    border-radius: 25px;
-  }
+  background-color: #3333332c;
+  border-radius: 10px;
+  /* overflow: hidden; */
+  text-align: center;
+  gap: 15px;
+  border-radius: 25px;
+}
 
-  .movie-cardb img {
-    /* width: 100%;
+.movie-cardb img {
+  /* width: 100%;
       height: auto; */
-    height: 250px;
-    border-radius: 25px;
-  }
-  .movie-cardb .content {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-  }
+  height: 250px;
+  border-radius: 25px;
+}
+.movie-cardb .content {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-  .movie-cardb .content h3 {
-    font-size: 16px;
-    margin: 10px 0;
-    color: #fff;
-    
-  }
+.movie-cardb .content h3 {
+  font-size: 16px;
+  margin: 10px 0;
+  color: #fff;
+}
 
-  .movie-cardb .content .rating {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffd700;
-  }
+.movie-cardb .content .rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffd700;
+}
 
 .movie-cardb .content .genre {
   font-size: 12px;
   color: #b3b3b3;
 }
 
+section {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  gap: 12px;
+}
+
+.rating {
+  color: yellow;
+}
+
+.movie-card:last-child img{
+  /* background-color: #b43feb; */
+  width: 250px;
+}
+
+/* @media screen and (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+
+  .containar,
+  .movie-grid {
+    margin-left: 0;
+  }
+
+  .movie-card,
+  .movie-cardb {
+    flex: 1 1 calc(50% - 10px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar {
+    height: auto;
+    flex-direction: column;
+  }
+
+  .navbar-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .profile-container {
+    margin-right: 0;
+  }
+
+  .movie-card,
+  .movie-cardb {
+    flex: 1 1 100%;
+  }
+
+  .movie-card img,
+  .movie-cardb img {
+    height: auto;
+  }
+} */
